# BaseFuture

./: BaseFuture.cabal  LICENSE  README.md
Control/Applicative/: Base470.hs  Compat.hs
Data/Bool/: Base470.hs  Compat.hs
Data/Either/: Base470.hs  Compat.hs
Data/Foldable/: Base470.hs  Compat.hs
Data/Functor/: Base470.hs  Compat.hs
Data/Traversable/: Base470.hs  Compat.hs
